--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.0.2",
     "@nextui-org/react": "^2.1.8",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -28,6 +27,7 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.12.0",
