--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@splinetool/react-spline": "^2.2.6",
+    "@tanstack/react-query": "^5.8.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -20,21 +21,27 @@
     "classnames": "^2.3.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.16.1",
+    "jszip": "^3.10.1",
+    "ldrs": "^1.0.1",
     "lucide-react": "^0.292.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.12.0",
     "typescript": "5.2.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
