--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-tsparticles": "^2.12.2",
+    "react-use-downloader": "^1.2.4",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.12.0",
     "typescript": "5.2.2",
