--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -21,8 +21,10 @@
     "classnames": "^2.3.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "fflate": "^0.8.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.1",
+    "fromentries": "^1.3.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.292.0",
     "next": "^13.5.6",
@@ -34,16 +36,19 @@
     "react-icons": "^4.11.0",
     "react-tsparticles": "^2.12.2",
     "react-use-downloader": "^1.2.4",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "3.3.3",
     "tsparticles": "^2.12.0",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
+    "uzip": "^0.20201231.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/uuid": "^9.0.7",
+    "@types/uzip": "^0.20201231.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
