--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,20 @@ services:
       algeo-network:
         aliases:
           - api.local
+  fe-service:
+    build:
+      dockerfile: Dockerfile
+      context: ./src/fe
+      target: prod
+    container_name: fe-service
+    hostname: fe-service
+    restart: on-failure
+    ports:
+      - "7781:3000"
+    networks:
+      algeo-network:
+        aliases:
+          - fe.local
 
 networks:
   algeo-network:
