core(docker): update env

--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -46,6 +46,8 @@ RUN apk add --no-cache tzdata && \
   apk del tzdata
 
 COPY --from=builder /go/src/api/dist/api .
+COPY ./config/config.yaml ./config.yaml
+
 COPY ./arial.ttf ./arial.ttf
 EXPOSE 3000
 ENTRYPOINT ["./api"]
@@ -73,6 +75,8 @@ RUN apk add --no-cache tzdata && \
   apk del tzdata
 
 COPY --from=builder /go/src/api/dist/api .
+COPY ./config/config.yaml ./config.yaml
+
 COPY ./arial.ttf ./arial.ttf
 EXPOSE 3000
 ENTRYPOINT ["./api"]
